# robot_moveit

./: .gitignore
src/: README.md
src/kuavo_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kuavo_arm_moveit_config/config/: fake_controllers.yaml  gazebo_kuavo_with_finger.urdf  joint_limits.yaml  kuavo_with_finger.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/kuavo_arm_traj_planner/: CMakeLists.txt  package.xml
src/kuavo_control/: CMakeLists.txt  package.xml  setup.py
src/kuavo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kuavo_urdf_with_hand/kuavo_with_finger/: CMakeLists.txt  package.xml
src/kuavo_urdf_with_hand/kuavo_with_finger/config/: joint_names_kuavo_with_finger.yaml
src/kuavo_urdf_with_hand/kuavo_with_finger/launch/: display.launch  gazebo.launch
src/kuavo_urdf_with_hand/kuavo_with_finger/meshes/: l_arm_pitch.STL  l_back_finger.STL  l_font_finger.STL  l_foot_roll.STL  l_forearm_pitch.STL  l_hand_pitch.STL  l_joller.STL  l_l_arm_tendon.STL  l_leg_pitch.STL  l_leg_yaw.STL  l_r_arm_tendon.STL  l_r_tendon.STL  r_arm_pitch.STL  r_back_finger.STL  r_font_finger.STL  r_foot_roll.STL  r_forearm_pitch.STL  r_hand_pitch.STL  r_joller.STL  r_l_arm_tendon.STL  r_leg_pitch.STL  r_leg_roll.STL  r_leg_yaw.STL  r_r_arm_tendon.STL  real_camera_link.STL
src/kuavo_urdf_with_hand/kuavo_with_finger/urdf/: kuavo_with_finger.csv  kuavo_with_finger.urdf  kuavo_with_finger.urdf.bak
src/trac_ik_examples/: CMakeLists.txt  README.md
src/trac_ik_lib/: CMakeLists.txt
(+131 files in other folders)
